refactor: Refactor shared code